@@ -48,6 +48,10 @@ $webcalConfig = array (
   'DATE_FORMAT_MD' => 'LANGUAGE_DEFINED',
   'DATE_FORMAT_MY' => 'LANGUAGE_DEFINED',
   'DATE_FORMAT_TASK' => 'LANGUAGE_DEFINED',
+  '_DEFAULT_MINICAL_USER' => '0',
+  '_DEFAULT_PUBLISH_USER' => '0',
+  '_DEFAULT_RSS_USER' => '0',
+  '_DEFAULT_UPCOMING_USER' => '0',
   '_DEMO_MODE' => 'N',
   'DISPLAY_ALL_DAYS_IN_MONTH' => 'N',
   'DISPLAY_CREATED_BYPROXY' => 'Y',
@@ -112,7 +116,6 @@ $webcalConfig = array (
   '_LIMIT_APPTS_NUMBER' => '6',
   '_LIMIT_DESCRIPTION_SIZE' => 'N',
   'MENU_DATE_TOP' => 'Y',
-  '_MINICAL_DEFAULT_USER' => '0',
   'MYEVENTS' => '#006000',
   '_NONUSER_AT_TOP' => 'Y',
   'OTHERMONTHBG' => '#D0D0D0',
@@ -128,7 +131,6 @@ $webcalConfig = array (
   'PUBLIC_ACCESS_DEFAULT_VISIBLE' => 'N',
   'PUBLIC_ACCESS_OTHERS' => 'Y',
   'PUBLIC_ACCESS_VIEW_PART' => 'N',
-  '_PUBLISH_DEFAULT_USER' => '0',
   'PULLDOWN_WEEKNUMBER' => 'N',
   'REMEMBER_LAST_LOGIN' => 'N',
   'REMINDER_DEFAULT' => 'N',
@@ -136,7 +138,6 @@ $webcalConfig = array (
   'REMINDER_WITH_DATE' => 'N',
   'REQUIRE_APPROVALS' => 'Y',
   '_RESTRICT_NUC_EDITS_BY_IP' => 'Y',
-  '_RSS_DEFAULT_USER' => '0',
   '_SELF_REGISTRATION_BLACKLIST' => 'N',
   '_SELF_REGISTRATION_FULL' => 'Y',
   '_SEND_EMAIL' => 'N',
@@ -160,7 +161,6 @@ $webcalConfig = array (
   'TIMED_EVT_LEN' => 'D',
   'TIMEZONE' => 'America/New_York',
   'TODAYCELLBG' => '#FFFF33',
-  '_UPCOMING_DEFAULT_USER' => '0',
   '_USER_SEES_ONLY_HIS_GROUPS' => 'Y',
   'USER_SORT_ORDER' => 'cal_lastname, cal_firstname',
   '_WEBCAL_PROGRAM_VERSION' => 'v2.0',
