@@ -288,12 +288,16 @@ remotes-enabled-help: Allows users to load remote ics files using URL
 Allow remote calendars: Allow remote calendars
 rss-enabled-help: Specifies if a user&#39;s calendar can be obtained from a RSS feed.
 Enable RSS feed: Enable RSS feed
+user-override-help: If enabled, allow user=nn URL parameter to be specified for special scripts.
+Allow user override: Allow user override
 rss-default-user-help: Default user to display in RSS feed.
 RSS default user: RSS default user
 publish-default-user-help: Default user account to use for Publishing via publish.php 
 Publish default user: Publish default user
 minical-default-user-help: Default user account to display when using minical.php
 Minical default user: Minical default user
+upcoming-default-user-help: Default user account to display when using upcoming.php
+Upcoming default user: Upcoming default user
 email-enabled-help: Turn on or off all sending of email for notification and reminders. Set to "no", if your server is not properly setup to send mail.
 Email enabled: Email enabled
 email-default-sender: Specifies the email address to specify as the sender when sending out reminders.
